Layout buttons fix on mobile.

--- a/gsearch-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/gsearch-web/src/main/resources/META-INF/resources/css/main.scss
@@ -217,6 +217,10 @@
 			
 			li {
 				display: inline-block;
+				
+				@include media-query(null, $screen-xs-max) {
+					margin-bottom: 10px;
+				}
 			}
 			
 			a {
